Finished all javadoc in the node class and made the potion compareTo method more consistent.